fixing padding values on mobile view gallery section

--- a/public/css/appCustomStyles.css
+++ b/public/css/appCustomStyles.css
@@ -809,7 +809,13 @@ h4 {
 
 .gallery-section {
   margin: 0 auto;
-  width: 85%;
+  width: 100%;
+}
+
+@media (min-width: 1200px) {
+  .gallery-section {
+    width: 85%;
+  }
 }
 
 .gallery-section .gallery-grid {
@@ -844,10 +850,15 @@ h4 {
   }
 }
 
+.gallery-section .gallery-grid .text-box h4 {
+  padding-top: 2.5rem;
+}
+
 @media (min-width: 1200px) {
   .gallery-section .gallery-grid .text-box h4 {
     font-size: 2.25rem;
     text-align: left;
+    padding-top: 0;
   }
 }
 
