--- a/resources/sass/_gallery_section.scss
+++ b/resources/sass/_gallery_section.scss
@@ -5,7 +5,11 @@ h4 {
 .gallery-section {
 
     margin: 0 auto;
-    width: 85%;
+    width: 100%;
+
+    @include for-desktop-up {
+        width: 85%;
+    }    
 
     .gallery-grid {
         display: grid;
@@ -40,9 +44,12 @@ h4 {
 
             h4 {
 
+                padding-top: 2.5rem;
+
                 @include for-desktop-up {
                     font-size: 2.25rem;
                     text-align: left;
+                    padding-top: 0;
                 }
             }
             
